# cpu-scheduling-sim

./: .gitignore  README.md  plot.ipynb  pyproject.toml  sim.py
in/128-pages/1024-refs/: pageReferencePattern.csv
in/128-pages/256-refs/: pageReferencePattern.csv
in/128-pages/512-refs/: pageReferencePattern.csv
in/128-processes/0-max-arrive-time/1-max-execution-time/: process.csv  process.txt
in/128-processes/0-max-arrive-time/16-max-execution-time/: process.csv  process.txt
in/128-processes/0-max-arrive-time/32-max-execution-time/: process.csv  process.txt
in/128-processes/128-max-arrive-time/1-max-execution-time/: process.csv  process.txt
in/128-processes/128-max-arrive-time/16-max-execution-time/: process.csv  process.txt
in/128-processes/128-max-arrive-time/32-max-execution-time/: process.csv  process.txt
in/128-processes/512-max-arrive-time/1-max-execution-time/: process.csv  process.txt
in/128-processes/512-max-arrive-time/16-max-execution-time/: process.csv  process.txt
in/128-processes/512-max-arrive-time/32-max-execution-time/: process.csv  process.txt
in/32-pages/1024-refs/: pageReferencePattern.csv
in/32-pages/256-refs/: pageReferencePattern.csv
in/32-pages/512-refs/: pageReferencePattern.csv
in/64-pages/1024-refs/: pageReferencePattern.csv
in/64-pages/256-refs/: pageReferencePattern.csv
in/64-pages/512-refs/: pageReferencePattern.csv
src/: go.mod  main.go  recorder.go  src
src/sim/: ds.go
src/sim/page/: page.go  pagingalgs.go
src/sim/process/: process.go  schedulingalgs.go
(+36 files in other folders)
