[tool.poetry]
name = "cpu-scheduling-sim"
version = "0.1.0"
description = ""
authors = ["kaykoe <karolkoenigg@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.10.0"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
